# ainakan-tools

./: .gitignore  .gitmodules  README.md  meson.build  setup.py
agents/: build.py
agents/fs/: agent.ts  meson.build  package-lock.json  package.json
agents/itracer/: agent.ts  meson.build  package-lock.json  package.json
agents/repl/: agent.ts  meson.build  package-lock.json  package.json
agents/tracer/: agent.ts  meson.build  package-lock.json  package.json
ainakan_tools/: _repl_magic.py  apk.py  application.py  compiler.py  creator.py  discoverer.py  itracer.py  join.py  kill.py  ls.py  lsd.py  meson.build  pm.py  ps.py  pull.py  push.py  reactor.py  repl.py  rm.py  tracer.py
apps/tracer/: index.html  meson.build  package-lock.json  package.json  vite.config.ts
apps/tracer/src/: App.tsx  DisassemblyView.tsx  HandlerEditor.tsx  MemoryView.tsx  model.ts
bridges/: java.ts  meson.build  objc.ts  package-lock.json  package.json  rollup.config.ts  swift.ts
completions/: ainakan.fish  meson.build
scripts/: meson.build  script.in
tests/: test_arguments.py  test_discoverer.py  test_tracer.py
